--- a/form.css
+++ b/form.css
@@ -65,4 +65,425 @@ ccform-addon{
     border-radius: 7px;
     
   }
+  @media screen and (max-width: 1300px) and (min-width: 1000px)
+{.header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:800px;
+  height:1300px;
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 300px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+  }
+@media screen and (max-width: 1000px) and (min-width: 800px)
+{.header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:800px;
+  height:1300px;
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 300px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+
+}
+@media screen and (min-width:600px) and (max-width:800px )
+{
+  .header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:550px;
+  height:1300px;
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 300px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+}
+@media screen and (min-width:300px) and (max-width:600px )
+{
+  .header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
   
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:350px;
+  height:1300px;
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 200px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+}
+@media screen and (min-width:200px) and (max-width:300px )
+{
+  .header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:200px;
+  height:1300px;
+  
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 80px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+}
+@media screen and (min-width:100px) and (max-width:200px )
+{
+
+  .header {
+  height: 150px;
+  background-image: linear-gradient(180deg, #D3281D, #F7FE2E); 
+  background-size: 100% 100%;
+  margin-bottom: px;
+  color: #fff;
+  padding: 10px 15px;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #454545;
+  background: #374046;
+  border-style: 2px solid red;
+}
+.content{
+
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 0 0 20px;
+  background: #fff;
+  overflow: hidden;
+  width:100px;
+  height:1300px;
+}
+
+ccform-addon{
+  color:#f8ae45; 
+  float:left;
+  padding:8px;
+  width:8%;
+  background:#FFFFFF;
+  text-align:center;  
+}
+
+.input-show{
+  margin-bottom:10px;
+  width:100%;
+}
+.input-box{
+  color:#000000; 
+  background:#FFFFFF;
+  border:none;
+  padding:15.5px;
+  width:91.9%;
+  display:block;
+  font-family: 'Lato',Arial,sans-serif;
+  font-size:14px;
+}
+ .btn{
+    color: lightgrey;
+    background:#5F239B;
+    border: 3px solid #87239B;
+    height: 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: ease-in-out 0.25s;
+    margin-left: 80px;
+    cursor: pointer;
+    border-radius: 7px;
+    
+  }
+}
